--- a/index.html
+++ b/index.html
@@ -9,37 +9,37 @@
 <body>
     <div class="calculator">
         <div class="display-container">
-            <div class="display">1234567890</div>
+            <div class="display"></div>
         </div>
         <div class="buttons">
             <div class="row">
                 <button class="AC">AC</button>
-                <button class="backspace">←</button>
+                <button class="backspace">Backspace</button>
                 <button class="equals">=</button>
             </div>
             <div class="row">
                 <button class="number">1</button>
                 <button class="number">2</button>
                 <button class="number">3</button>
-                <button class="operator plus">+</button>
+                <button class="operator">+</button>
             </div>
             <div class="row">
                 <button class="number">4</button>
                 <button class="number">5</button>
                 <button class="number">6</button>
-                <button class="operator minus">-</button>
+                <button class="operator">-</button>
             </div>
             <div class="row">
                 <button class="number">7</button>
                 <button class="number">8</button>
                 <button class="number">9</button>
-                <button class="operator multiply">*</button>
+                <button class="operator">*</button>
             </div>
             <div class="row">
-                <button class="negative">+/-</button>
+                <button class="number">+/-</button>
                 <button class="number">0</button>
-                <button class="number decimal">.</button>
-                <button class="operator divide">/</button>
+                <button class="number">.</button>
+                <button class="operator">/</button>
             </div>
         </div>
     </div>
